<resources>
    <string name="app_name">WanAndroid</string>
    <string name="search">搜索</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share">分享</string>
    <string name="share_hint">这篇文章很不错，快打开看看吧：</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="uncollect_success">取消收藏成功</string>
    <string name="uncollect_fail">取消收藏失败</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="todo_tool">TODO 工具</string>
    <string name="my_collections">我的收藏</string>
    <string name="settings">设置</string>
    <string name="home_page">首页</string>
    <string name="knowledge_system">体系</string>
    <string name="wechat_blog">公众号</string>
    <string name="discover">发现</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="register_tip">没有账号？前去注册吧~</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="login_tip">已有账号？前去登录吧~</string>
    <string name="pin_top">置顶</string>
    <string name="add">添加</string>
    <string name="edit">修改</string>
    <string name="done_list">已完成清单</string>
    <string name="todo_list">待办清单</string>
    <string name="hot_search">热门搜索</string>
    <string name="common_websites">常用网站</string>
    <string name="history_search">历史搜索</string>
    <string name="todo_category_default">只用这一个</string>
    <string name="todo_category_work">工作</string>
    <string name="todo_category_learn">学习</string>
    <string name="todo_category_life">生活</string>
    <string name="add_todo_item">添加待办清单</string>
    <string name="required_title">标题（必填）</string>
    <string name="optional_description">详情（非必填）</string>
    <string name="time">时间：</string>
    <string name="cancel">取消</string>
    <string name="no_data">暂无数据</string>
    <string name="loading">正在加载中</string>
    <string name="app_name_v1">玩Android V1.0</string>
    <string name="go_top">回到顶部</string>
    <string name="light_mode">浅色模式</string>
    <string name="dark_mode">深色模式</string>
    <string name="mine">我的</string>
    <string name="logout_confirm_title">提示</string>
    <string name="logout_confirm_body">确认退出登录吗</string>
    <string name="logout_confirm_confirm">确定</string>
    <string name="logout_confirm_cancel">取消</string>
    <string name="toast_logout_success">退出登录成功</string>
    <string name="collect">收藏</string>
    <string name="uncollect">取消收藏</string>
    <string name="open_in_browser">浏览器打开</string>
    <string name="refresh">刷新</string>
    <string name="more">更多</string>
    <string name="login_failed">登录失败</string>
    <string name="login_success">登录成功！</string>
    <string name="signup_success">注册成功！</string>
    <string name="signup_failed">注册失败</string>
    <string name="logout_failed">退出登录失败</string>
    <string name="search_input_hint">输入关键字进行搜索</string>
    <string name="confirm">确认</string>
    <string name="load_error">加载内容出错了~</string>
</resources>
