<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/add_todo_item"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/LinePrimary" />

    <EditText
        android:id="@+id/dlog_add_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/required_title" />

    <EditText
        android:id="@+id/dlog_add_todo_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="bottom"
        android:hint="@string/optional_description"
        android:lines="3" />

    <TextView
        android:id="@+id/dlog_add_todo_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/time"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/dlog_add_todo_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@color/AccentSecondary"
            android:text="@string/cancel"
            android:textColor="@color/Accent" />

        <Button
            android:id="@+id/dlog_add_todo_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@color/Accent"
            android:text="@string/add"
            android:textColor="@color/TextReversePrimary" />
    </LinearLayout>
</LinearLayout>