<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/Primary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/img_avatar" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/TextPrimary"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
        <life.lixiaoyu.flipped.uikit.cell.FlippedCellItemView
            android:id="@+id/item_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:start_text="@string/my_collections"
            app:flipped_start_icon="@drawable/ic_favorite_full"
            android:background="@drawable/ripple_item_select"
            />
        <life.lixiaoyu.flipped.uikit.cell.FlippedCellItemView
            android:id="@+id/item_todos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:start_text="@string/todo_list"
            app:flipped_start_icon="@drawable/ic_todo_checklist"
            android:background="@drawable/ripple_item_select"
            />
        <life.lixiaoyu.flipped.uikit.cell.FlippedCellItemView
            android:id="@+id/item_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:start_text="@string/dark_mode"
            app:flipped_start_icon="@drawable/ic_dark_mode"
            android:background="@drawable/ripple_item_select"
            />
        <life.lixiaoyu.flipped.uikit.cell.FlippedCellItemView
            android:id="@+id/item_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:start_text="@string/about_us"
            app:flipped_start_icon="@drawable/ic_info"
            android:background="@drawable/ripple_item_select"
            />
        <life.lixiaoyu.flipped.uikit.cell.FlippedCellItemView
            android:id="@+id/item_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:start_text="@string/logout"
            app:flipped_start_icon="@drawable/ic_logout"
            android:background="@drawable/ripple_item_select"
            />
    </LinearLayout>
</ScrollView>
