<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:titleTextColor="@color/TextPrimary"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/word_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/search_input_hint"
                    android:textColorHint="@color/TextSecondary"
                    android:textColor="@color/TextPrimary" />

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/TextReversePrimary"
                    android:background="@drawable/bg_accent_round_16"
                    android:text="@string/search" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <View
                    android:layout_width="5dp"
                    android:layout_height="20dp"
                    android:background="@drawable/bg_search_session_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/history_search"
                    android:textSize="18sp"
                    android:textColor="@color/TextPrimary" />

                <Button
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_delete"
                    android:backgroundTint="@color/TextSecondary"
                    android:id="@+id/btn_clearHistory"/>
            </LinearLayout>

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/tf_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <View
                    android:layout_width="5dp"
                    android:layout_height="20dp"
                    android:background="@drawable/bg_search_session_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/hot_search"
                    android:textSize="18sp"
                    android:textColor="@color/TextPrimary" />
            </LinearLayout>

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/tf_hotkeys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <View
                    android:layout_width="5dp"
                    android:layout_height="20dp"
                    android:background="@drawable/bg_search_session_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/common_websites"
                    android:textSize="18sp"
                    android:textColor="@color/TextPrimary" />
            </LinearLayout>

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/tf_commonsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>